better performance in synchronization